--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -11,29 +11,35 @@
                 style="width:240px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
                 class="{{ active_youtube }}"
             >
-                <div style="height:60px;vertical-align:middle;display:inline-block;"><h3>YouTube</h3></div>
+                <h3 style="line-height:60px;">YouTube</h3>
                 <div style="height:160px"><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
                 <ul>
-                    <li>Search</li>
-                    <li>Transcripts</li>
+                    <li>Social Metrics</li>
+                    <li>Load Transcripts</li>
+                    <li>Integrated Search</li>
                 </ul>
             </td>
             <td
                 style="width:240px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
                 class="{{ active_x }}"
             >
-                <div style="height:60px;vertical-align:middle;display:inline-block;"><h3>X / Twitter</h3></div>
+                <h3 style="line-height:60px;">Twitter</h3>
                 <div style="height:160px"><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
                 <ul>
-                    <li>$cashtags</li>
+                    <li>Social Metrics</li>
+                    <li>$cash Tags</li>
+                    <li>Browse Recent Timelines</li>
                 </ul>
             </td>
             <td
                 style="width:240px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
                 class="{{ active_web }}"
             >
-                <div style="height:60px;vertical-align:middle;display:inline-block;"><h3>Import<br>any Webpage</h3></div>
+                <h3 style="line-height:60px;">Any Webpage</h3>
                 <div style="height:160px"><img src="/assets/influencer-web.svg" style="width:180px;" alt="Webpages"></div>
+                <ul>
+                    <li>Open Graph / SEO tags</li>
+                </ul>
             </td>
         </tr>
     </table>
