--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -12,7 +12,7 @@
                 class="{{ active_youtube }}"
             >
                 <h3 style="line-height:60px;">YouTube</h3>
-                <div style="height:160px"><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
+                <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
                 <ul>
                     <li>Social Metrics</li>
                     <li>Load Transcripts</li>
@@ -24,7 +24,7 @@
                 class="{{ active_x }}"
             >
                 <h3 style="line-height:60px;">Twitter</h3>
-                <div style="height:160px"><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
+                <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
                 <ul>
                     <li>Social Metrics</li>
                     <li>$cash Tags</li>
@@ -36,7 +36,7 @@
                 class="{{ active_web }}"
             >
                 <h3 style="line-height:60px;">Any Webpage</h3>
-                <div style="height:160px"><img src="/assets/influencer-web.svg" style="width:180px;" alt="Webpages"></div>
+                <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-web.svg" style="width:180px;margin-top:-10px;" alt="Webpages"></div>
                 <ul>
                     <li>Open Graph / SEO tags</li>
                 </ul>
