--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -5,40 +5,43 @@
 <div class="mt-5 mb-5 text-center">
     <h2 class="display-5 fw-bold mb-4">Social Media Integrations</h2>
 
+    <style>
+        .integrationcell {
+            width: 240px;
+            border-radius: 25px;
+            border: 2px solid #282739;
+            vertical-align: top;
+            font-size: larger;
+        }
+        .integrationcell:hover {
+            backgroud: #ed2c8a;
+        }
+    </style>
     <table style="border-collapse:separate;display:inline-block;">
         <tr>
-            <td 
-                style="width:240px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
-                class="{{ active_youtube }}"
-            >
+            <td class="integrationcell {{ active_youtube }}">
                 <h3 style="line-height:60px;">YouTube</h3>
                 <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
-                <ul>
-                    <li>Social Metrics</li>
-                    <li>Load Transcripts</li>
+                <ul style="margin:0px 10px 10px 10px;">
+                    <li>Live Social Metrics</li>
+                    <li>Video Transcripts</li>
                     <li>Integrated Search</li>
                 </ul>
             </td>
-            <td
-                style="width:240px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
-                class="{{ active_x }}"
-            >
+            <td class="integrationcell {{ active_x }}">
                 <h3 style="line-height:60px;">Twitter</h3>
                 <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
-                <ul>
-                    <li>Social Metrics</li>
-                    <li>$cash Tags</li>
+                <ul style="margin:0px 10px 10px 10px;">
+                    <li>Live Social Metrics</li>
+                    <li>$cash Tag Import</li>
                     <li>Browse Recent Timelines</li>
                 </ul>
             </td>
-            <td
-                style="width:240px;border-radius:25px;border:2px solid #282739;vertical-align:top;"
-                class="{{ active_web }}"
-            >
+            <td class="integrationcell {{ active_web }}">
                 <h3 style="line-height:60px;">Any Webpage</h3>
                 <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-web.svg" style="width:180px;margin-top:-10px;" alt="Webpages"></div>
-                <ul>
-                    <li>Open Graph / SEO tags</li>
+                <ul style="margin:0px 10px 10px 10px;">
+                    <li>Open Graph tags</li>
                 </ul>
             </td>
         </tr>
