--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -13,35 +13,45 @@
             vertical-align: top;
             font-size: larger;
         }
+        .integrationcell ul {
+            margin: 0px 10px 30px 10px;
+        }
+        .integrationcell div {
+            height:160px;
+            margin-bottom:20px;
+        }
+        .integrationcell h3 {
+            line-height: 60px;
+        }
         .integrationcell:hover {
-            backgroud: #ed2c8a;
+            background: #ed2c8a;
         }
     </style>
     <table style="border-collapse:separate;display:inline-block;">
         <tr>
             <td class="integrationcell {{ active_youtube }}">
-                <h3 style="line-height:60px;">YouTube</h3>
-                <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
-                <ul style="margin:0px 10px 10px 10px;">
+                <h3>YouTube</h3>
+                <div><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
+                <ul>
                     <li>Live Social Metrics</li>
                     <li>Video Transcripts</li>
                     <li>Integrated Search</li>
                 </ul>
             </td>
             <td class="integrationcell {{ active_x }}">
-                <h3 style="line-height:60px;">Twitter</h3>
-                <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
-                <ul style="margin:0px 10px 10px 10px;">
+                <h3>Twitter</h3>
+                <div><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
+                <ul>
                     <li>Live Social Metrics</li>
-                    <li>$cash Tag Import</li>
-                    <li>Browse Recent Timelines</li>
+                    <li>$CashTag Import</li>
+                    <li>Browse Timelines</li>
                 </ul>
             </td>
             <td class="integrationcell {{ active_web }}">
-                <h3 style="line-height:60px;">Any Webpage</h3>
-                <div style="height:160px;margin-bottom:20px;"><img src="/assets/influencer-web.svg" style="width:180px;margin-top:-10px;" alt="Webpages"></div>
-                <ul style="margin:0px 10px 10px 10px;">
-                    <li>Open Graph tags</li>
+                <h3>Any Webpage</h3>
+                <div><img src="/assets/influencer-web.svg" style="width:180px;margin-top:-10px;" alt="Webpages"></div>
+                <ul>
+                    <li>Open Graph Import</li>
                 </ul>
             </td>
         </tr>
