--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -1,58 +1,72 @@
 {% capture active_youtube %}{% if include.selected == "youtube" %}active{% endif %}{% endcapture %}
 {% capture active_x %}{% if include.selected == "x" %}active{% endif %}{% endcapture %}
-{% capture active_web %}{% if include.selected == "web" %}active{% endif %}{% endcapture %}
+{% capture active_url %}{% if include.selected == "url" %}active{% endif %}{% endcapture %}
 
 <div class="mt-5 mb-5 text-center">
     <h2 class="display-5 fw-bold mb-4">Social Media Integrations</h2>
 
     <style>
-        .integrationcell {
+        .integrationtable {
+            border-collapse: separate;
+            display: inline-block;
+        }
+        .integrationtable td {
             width: 240px;
             border-radius: 25px;
             border: 2px solid #282739;
             vertical-align: top;
             font-size: larger;
         }
-        .integrationcell ul {
+        .integrationtable td.active {
+            background: #282739;
+            color: white;
+        }
+        .integrationtable ul {
             margin: 0px 10px 30px 10px;
         }
-        .integrationcell div {
-            height:160px;
-            margin-bottom:20px;
+        .integrationtable div {
+            height: 160px;
+            margin-bottom: 20px;
         }
-        .integrationcell h3 {
+        .integrationtable h3 {
             line-height: 60px;
         }
-        .integrationcell:hover {
+        .integrationtable td:not(.active):hover {
             background: #ed2c8a;
         }
     </style>
-    <table style="border-collapse:separate;display:inline-block;">
+    <table class="integrationtable">
         <tr>
-            <td class="integrationcell {{ active_youtube }}">
-                <h3>YouTube</h3>
-                <div><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
-                <ul>
-                    <li>Live Social Metrics</li>
-                    <li>Video Transcripts</li>
-                    <li>Integrated Search</li>
-                </ul>
+            <td class="{{ active_youtube }}">
+                {% unless active_youtube %}<a href="/youtube-import">{% endunless %}
+                    <h3>YouTube</h3>
+                    <div><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
+                    <ul>
+                        <li>Live Social Metrics</li>
+                        <li>Video Transcripts</li>
+                        <li>Integrated Search</li>
+                    </ul>
+                {% unless active_youtube %}</a>{% endunless %}
             </td>
-            <td class="integrationcell {{ active_x }}">
-                <h3>Twitter</h3>
-                <div><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
-                <ul>
-                    <li>Live Social Metrics</li>
-                    <li>$CashTag Import</li>
-                    <li>Browse Timelines</li>
-                </ul>
+            <td class="{{ active_x }}">
+                {% unless active_x %}<a href="/x-import">{% endunless %}
+                    <h3>Twitter</h3>
+                    <div><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
+                    <ul>
+                        <li>Live Social Metrics</li>
+                        <li>$CashTag Import</li>
+                        <li>Browse Timelines</li>
+                    </ul>
+                {% unless active_x %}</a>{% endif %}
             </td>
-            <td class="integrationcell {{ active_web }}">
-                <h3>Any Webpage</h3>
-                <div><img src="/assets/influencer-web.svg" style="width:180px;margin-top:-10px;" alt="Webpages"></div>
-                <ul>
-                    <li>Open Graph Import</li>
-                </ul>
+            <td class="{{ active_url }}">
+                {% unless active_url %}<a href="/url-import">{% endunless %}
+                    <h3>Any Webpage</h3>
+                    <div><img src="/assets/influencer-url.svg" style="width:180px;margin-top:-10px;" alt="URLs"></div>
+                    <ul>
+                        <li>Open Graph Import</li>
+                    </ul>
+                {% unless active_url %}</a>{% endunless %}
             </td>
         </tr>
     </table>
