--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -57,7 +57,7 @@
                         <li>$CashTag Import</li>
                         <li>Browse Timelines</li>
                     </ul>
-                {% unless active_x %}</a>{% endif %}
+                {% unless active_x %}</a>{% endunless %}
             </td>
             <td class="{{ active_url }}">
                 {% unless active_url %}<a href="/url-import">{% endunless %}
