--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -18,9 +18,13 @@
             font-size: larger;
         }
         .integrationtable td.active {
-            background: #777777;
+            background: #aaaaaa;
             color: white;
             cursor: pointer;
+        }
+        .integrationtable a {
+            color: inherit;
+            text-decoration: inherit;
         }
         .integrationtable ul {
             margin: 0px 10px 30px 10px;
