--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -48,7 +48,7 @@
                     <h3>YouTube</h3>
                     <div><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
                     <ul>
-                        <li>Live Social Metrics</li>
+                        <li>Social Metrics</li>
                         <li>Video Transcripts</li>
                         <li>Integrated Search</li>
                     </ul>
@@ -59,9 +59,9 @@
                     <h3>Twitter</h3>
                     <div><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
                     <ul>
-                        <li>Live Social Metrics</li>
+                        <li>Social Metrics</li>
                         <li>$CashTag Import</li>
-                        <li>Browse Timelines</li>
+                        <li>Timelines</li>
                     </ul>
                 {% if active_x == "" %}</a>{% endif %}
             </td>
