--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -44,7 +44,7 @@
     <table class="integrationtable">
         <tr>
             <td class="{{ active_youtube }}">
-                {% if active_youtube == "" %}<a href="/youtube-import">{% endif %}
+                {% if active_youtube == "" %}<a href="/youtube">{% endif %}
                     <h3>YouTube</h3>
                     <div><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
                     <ul>
@@ -55,7 +55,7 @@
                 {% if active_youtube == "" %}</a>{% endif %}
             </td>
             <td class="{{ active_x }}">
-                {% if active_x == "" %}<a href="/x-import">{% endif %}
+                {% if active_x == "" %}<a href="/x">{% endif %}
                     <h3>Twitter</h3>
                     <div><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
                     <ul>
@@ -66,7 +66,7 @@
                 {% if active_x == "" %}</a>{% endif %}
             </td>
             <td class="{{ active_url }}">
-                {% if active_url == "" %}<a href="/url-import">{% endif %}
+                {% if active_url == "" %}<a href="/urls">{% endif %}
                     <h3>Any Webpage</h3>
                     <div><img src="/assets/influencer-url.svg" style="width:180px;margin-top:-10px;" alt="URLs"></div>
                     <ul>
