--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,2 @@
 <h1 class="display-5 fw-bold text-center">Track Stock Recommendations<br/>made on any Social Media Platform</h1>
-<h2 class="text-center">Audit the trading records of Stock Pros and other Influencers</h2>
+<h2 class="mt-3 text-center">Audit the trading records of Stock Pros and other Influencers</h2>
