--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -16,6 +16,7 @@
             border: 2px solid #282739;
             vertical-align: top;
             font-size: larger;
+            padding-top: 14px;
         }
         .integrationtable td.active {
             cursor: pointer;
@@ -27,11 +28,10 @@
         .activex {
             background: #1da1f2;
             color: #ffffff;
-            cursor: pointer;
         }
         .activeurls {
             background: #fb8b1e;
-            color: #ffffff;
+            color: #000000;
         }
         .integrationtable a {
             color: inherit;
