--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,19 +55,25 @@
 
     </div>
   </main>
-  
-  <footer class="border-top footer mt-auto" style="font-size:16pt">
-    <div class="container-xl d-flex flex-wrap me-auto">
-        <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
-            <img src="https://tradeaudit.app/assets/images/favicon.ico" width="32" height="32" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
-        </a>
 
-        <ul class="nav text-end">
-          <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
-          <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
-          <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
-        </ul>
-      </div>
-  </footer>
+  <div id="footer" class="page__footer">
+      <footer>
+          {% include footer/custom.html %}
+          {% include_cached footer.html %}
+      </footer>
+  </div>
+<!--  <footer class="border-top footer mt-auto" style="font-size:16pt">-->
+<!--    <div class="container-xl d-flex flex-wrap me-auto">-->
+<!--        <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">-->
+<!--            <img src="https://tradeaudit.app/assets/images/favicon.ico" width="32" height="32" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">-->
+<!--        </a>-->
+
+<!--        <ul class="nav text-end">-->
+<!--          <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>-->
+<!--          <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>-->
+<!--          <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--  </footer>-->
 </body>
 </html>
