--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,11 @@
   <footer class="border-top footer mt-auto" style="font-size:16pt">
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
-            <img src="https://tradeaudit.app/assets/images/favicon.ico" width="32" height="32" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
+            <img src="https://tradeaudit.app/assets/images/favicon.ico" title="Trade Audit Mobile App" alt="Trade Audit Mobile App" width="48" height="48">
+            <div style="display: inline-block;line-height: 10px;vertical-align: baseline;">
+                <span style="line-height:20px">Trade Audit</span><br>
+                <span style="font-size: small;line-height: 10px;">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</span>
+            </div>
         </a>
 
         <ul class="nav text-end">
