--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
             <img src="https://tradeaudit.app/assets/images/favicon.ico" title="Trade Audit Mobile App" alt="Trade Audit Mobile App" width="48" height="48">
-            <div style="display: inline-block;line-height: 10px;vertical-align: baseline;">
+            <div style="display: inline-block;line-height: 10px;vertical-align: middle;">
                 <span style="line-height:20px">Trade Audit</span><br>
                 <span style="font-size: small;line-height: 10px;">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</span>
             </div>
