--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,9 +44,9 @@
     <nav class="py-2 border-bottom">
         <div class="container-xl d-flex flex-wrap">
             <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
-                <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" 
-                     width="60" height="60" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
-                <span style="font-size: 36pt !important;vertical-align: middle;">Trade Audit</span>
+                <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;"
+                     width="60" height="60" title="{{ site.title }}" alt="{{ site.title }}">
+                <span style="font-size: 36pt !important;vertical-align: middle;">{{ site.title }}</span>
             </a>
             <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
         </div>
@@ -64,10 +64,10 @@
   <footer class="border-top footer mt-auto" style="font-size:16pt">
     <div class="container-xl d-flex flex-wrap me-auto">
         <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
-            <img src="https://tradeaudit.app/assets/images/favicon.ico" title="Trade Audit Mobile App" alt="Trade Audit Mobile App" width="48" height="48">
+            <img src="https://tradeaudit.app/assets/images/favicon.ico" title="{{ site.title }}" alt="{{ site.title }}" width="48" height="48">
             <div style="display: inline-block;line-height: 10px;vertical-align: middle;">
-                <span style="line-height:20px">Trade Audit</span><br>
-                <span style="font-size: small;line-height: 10px;">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</span>
+                <span style="line-height:20px">{{ site.author }}</span><br>
+                <span style="font-size: small;line-height: 10px;">&copy; 2022-{{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</span>
             </div>
         </a>
 
