--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,7 @@
           <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
           <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
           <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
+          <li class="nav-item"><a href="/data-deletion" class="nav-link px-2 text-muted">Account &amp; Data Deletion</a></li>
         </ul>
       </div>
   </footer>
