--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,86 +1,140 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="{{ site.author }}">
-    <meta name="description" content="{{ site.description }}">
-    <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tradeaudit.app">
-    <meta property="og:image" content="https://tradeaudit.app/assets/images/opengraph.png">
-    <meta property="og:image:width" content="225">
-    <meta property="og:image:height" content="225">
-    <meta name="twitter:title" content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ site.description }}">
-    <meta name="twitter:url" content="https://tradeaudit.app">
-    <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png">
-    <title>{{ page.title }}</title>
-    <link rel="shortcut icon" href="https://tradeaudit.app/assets/images/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/halfmoon.min.css" rel="stylesheet" integrity="sha256-SsJizWSIG9JT9Qxbiy8xnYJfjCAkhEQ0hihxRn7jt2M=" crossorigin="anonymous">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '{{ site.analytics.google.tracking_id }}');
-    </script>
-    <style>
-        .bg-body { background-color: #f9f7ed !important; }
-        a { color: #1d9bf0; }
-        a:hover { color: #ed2c8a; }
-        .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #6c757d; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #6c757d; }
-        .bg-light { background-color: #282739 !important; }
-        .link-dark { color: #fff !important; }
-        .link-dark:hover { color: #ed2c8a !important; }
-        .text-muted { color: #c7c6cb !important; }
-        a.text-muted:hover { color: #ed2c8a !important; }
-        .nav { --bs-nav-link-padding-y: 0.1rem; }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="{{ site.author }}">
+  <meta name="description" content="{{ site.description }}">
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tradeaudit.app">
+  <meta property="og:image" content="https://tradeaudit.app/assets/images/opengraph.png">
+  <meta property="og:image:width" content="225">
+  <meta property="og:image:height" content="225">
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ site.description }}">
+  <meta name="twitter:url" content="https://tradeaudit.app">
+  <meta name="twitter:image" content="https://tradeaudit.app/assets/images/opengraph.png">
+  <title>{{ page.title }}</title>
+  <link rel="shortcut icon" href="https://tradeaudit.app/assets/images/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/halfmoon.min.css" rel="stylesheet"
+        integrity="sha256-SsJizWSIG9JT9Qxbiy8xnYJfjCAkhEQ0hihxRn7jt2M=" crossorigin="anonymous">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '{{ site.analytics.google.tracking_id }}');
+  </script>
+  <style>
+    .bg-body { background-color: #f9f7ed !important; }
+    a { color: #1d9bf0; }
+    a:hover { color: #ed2c8a; }
+    .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #6c757d; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #6c757d; }
+    .bg-light { background-color: #282739 !important; }
+    .link-dark { color: #fff !important; }
+    .link-dark:hover { color: #ed2c8a !important; }
+    .text-muted { color: #c7c6cb !important; }
+    a.text-muted:hover { color: #ed2c8a !important; }
+    .nav { --bs-nav-link-padding-y: 0.1rem; }
+  </style>
 </head>
-<body class="d-flex flex-column h-100 bg-light" style="font-family: 'Gill Sans', 'Helvetica', sans-serif;">
-  <header>
-    <nav class="py-2 border-bottom">
-        <div class="container-xl d-flex flex-wrap">
-            <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
-                <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;"
-                     width="60" height="60" title="{{ site.title }}" alt="{{ site.title }}">
-                <span style="font-size: 36pt !important;vertical-align: middle;">{{ site.title }}</span>
-            </a>
-            <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
-        </div>
-    </nav>
-  </header>
-  
-  <main class="bg-body" style="flex-grow:1;display:flex;flex-direction:column;">  
-    <div class="container-xl g-5 my-5" style="flex-grow:1;display:flex;flex-direction:column;">
-    
-        {{ content }}
-
+<body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light" style="font-family: 'Gill Sans', 'Helvetica', sans-serif;">
+<nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
+  <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
+    <a class="sidebar-brand" href="#">
+      <img src="..." alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
+      Builder
+    </a>
+    <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
+            data-bs-target="#sidebar-example"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div class="mt-2 mb-3">
+      <input type="text" class="form-control" placeholder="Search">
     </div>
-  </main>
+    <ul class="sidebar-nav">
+      <li>
+        <h6 class="sidebar-header">Getting started</h6>
+      </li>
+      <li>
+        <hr class="sidebar-divider">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#" aria-current="page">Installation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">CLI commands</a>
+      </li>
+      <li class="mt-3">
+        <h6 class="sidebar-header">Components</h6>
+      </li>
+      <li>
+        <hr class="sidebar-divider">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">File explorer</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Spreadsheet</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Maps</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Messenger</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<header>
+  <nav class="py-2 border-bottom">
+    <div class="container-xl d-flex flex-wrap">
+      <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
+        <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;"
+             width="60" height="60" title="{{ site.title }}" alt="{{ site.title }}">
+        <span style="font-size: 36pt !important;vertical-align: middle;">{{ site.title }}</span>
+      </a>
+      <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img
+          alt="Get it on Google Play" height="60"
+          src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
+    </div>
+  </nav>
+</header>
 
-  <footer class="border-top footer mt-auto" style="font-size:16pt">
-    <div class="container-xl d-flex flex-wrap me-auto">
-        <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
-            <img src="https://tradeaudit.app/assets/images/favicon.ico" title="{{ site.title }}" alt="{{ site.title }}" width="48" height="48">
-            <div style="display: inline-block;line-height: 10px;vertical-align: middle;">
-                <span style="line-height:20px;font-weight:600;">{{ site.title }}</span><br>
-                <span style="font-size: small;line-height: 10px;">&copy; 2022-{{ site.time | date: '%Y' }} {{ site.author }}.</span>
-            </div>
-        </a>
+<main class="bg-body" style="flex-grow:1;display:flex;flex-direction:column;">
+  <div class="container-xl g-5 my-5" style="flex-grow:1;display:flex;flex-direction:column;">
 
-        <ul class="nav text-end">
-            {% if site.footer.links %}
-            {% for link in site.footer.links %}
-            {% if link.label and link.url %}
-            <li class="nav-item" style="line-height:48px;"><a href="{{ link.url }}" rel="nofollow noopener noreferrer" class="nav-link px-2 text-muted"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
-            {% endif %}
-            {% endfor %}
-            {% endif %}
-        </ul>
+    {{ content }}
+
+  </div>
+</main>
+
+<footer class="border-top footer mt-auto" style="font-size:16pt">
+  <div class="container-xl d-flex flex-wrap me-auto">
+    <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
+      <img src="https://tradeaudit.app/assets/images/favicon.ico" title="{{ site.title }}" alt="{{ site.title }}"
+           width="48" height="48">
+      <div style="display: inline-block;line-height: 10px;vertical-align: middle;">
+        <span style="line-height:20px;font-weight:600;">{{ site.title }}</span><br>
+        <span
+            style="font-size: small;line-height: 10px;">&copy; 2022-{{ site.time | date: '%Y' }} {{ site.author }}.</span>
       </div>
-  </footer>
+    </a>
+
+    <ul class="nav text-end">
+      {% if site.footer.links %}
+      {% for link in site.footer.links %}
+      {% if link.label and link.url %}
+      <li class="nav-item" style="line-height:48px;"><a href="{{ link.url }}" rel="nofollow noopener noreferrer"
+                                                        class="nav-link px-2 text-muted"><i
+          class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
+      {% endif %}
+      {% endfor %}
+      {% endif %}
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
