--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,47 +43,41 @@
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light" style="font-family: 'Gill Sans', 'Helvetica', sans-serif;">
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
-    <a class="sidebar-brand" href="#">
+    <!--<a class="sidebar-brand" href="#">
       <img src="..." alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
       Builder
-    </a>
+    </a>-->
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
             data-bs-target="#sidebar-example"></button>
   </div>
   <div class="offcanvas-body">
-    <div class="mt-2 mb-3">
-      <input type="text" class="form-control" placeholder="Search">
-    </div>
     <ul class="sidebar-nav">
       <li>
-        <h6 class="sidebar-header">Getting started</h6>
+        <h6 class="sidebar-header">Getting Started</h6>
       </li>
       <li>
         <hr class="sidebar-divider">
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#" aria-current="page">Installation</a>
+        <a class="nav-link" href="/">Download</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CLI commands</a>
+        <a class="nav-link" href="/rankings">Influencer Rankings</a>
       </li>
       <li class="mt-3">
-        <h6 class="sidebar-header">Components</h6>
+        <h6 class="sidebar-header">Social Media Integrations</h6>
       </li>
       <li>
         <hr class="sidebar-divider">
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">File explorer</a>
+        <a class="nav-link" href="/youtube"><img src="/assets/influencer-youtube.svg" style="width:20px;" alt="YouTube">YouTube</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Spreadsheet</a>
+        <a class="nav-link" href="/x"><img src="/assets/influencer-x.svg" style="width:20px;" alt="X">Twitter / X</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Maps</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messenger</a>
+        <a class="nav-link" href="/urls"><img src="/assets/influencer-url.svg" style="width:20px;" alt="URLs">Web Pages</a>
       </li>
     </ul>
   </div>
