--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,10 @@
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light" style="font-family: 'Gill Sans', 'Helvetica', sans-serif;">
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
-    <!--<a class="sidebar-brand" href="#">
-      <img src="..." alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
-      Builder
-    </a>-->
+    <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
+      <img src="https://tradeaudit.app/assets/images/favicon.ico" title="Trade Audit Mobile App" alt="Trade Audit Mobile App" width="48" height="48">
+      Trade Audit Mobile App
+    </a>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
             data-bs-target="#sidebar-example"></button>
   </div>
@@ -81,6 +81,8 @@
       </li>
     </ul>
   </div>
+</nav>
+<nav class="navbar navbar-expand-md docs-navbar sticky-top">
 </nav>
 <header>
   <nav class="py-2 border-bottom">
