--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
     <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
-      <img src="https://tradeaudit.app/assets/images/favicon.ico" title="Trade Audit Mobile App" alt="Trade Audit Mobile App" width="48" height="48">
+      <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" width="60" height="60" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
       Trade Audit Mobile App
     </a>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
@@ -80,8 +80,10 @@
         <a class="nav-link" href="/urls"><img src="/assets/influencer-url.svg" style="width:20px;" alt="URLs">Web Pages</a>
       </li>
     </ul>
+    <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
   </div>
 </nav>
+<!--
 <nav class="navbar navbar-expand-md docs-navbar sticky-top">
 </nav>
 <header>
@@ -98,7 +100,7 @@
     </div>
   </nav>
 </header>
-
+-->
 <main class="bg-body" style="flex-grow:1;display:flex;flex-direction:column;">
   <div class="container-xl g-5 my-5" style="flex-grow:1;display:flex;flex-direction:column;">
 
