--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,8 @@
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
     <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
-      <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" width="60" height="60" title="Trade Audit Mobile App" alt="Trade Audit Mobile App">
-      Trade Audit Mobile App
+      <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" width="60" height="60" title="Trade Audit App" alt="Trade Audit App">
+      Trade Audit App
     </a>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
             data-bs-target="#sidebar-example"></button>
@@ -97,10 +97,10 @@
       <img src="https://tradeaudit.app/assets/images/favicon.png"
            style="border-radius:20%;"
            width="32" height="32"
-           title="Trade Audit Mobile App"
-           alt="Trade Audit Mobile App"
+           title="Trade Audit App"
+           alt="Trade Audit App"
            class="d-block flex-shrink-0 me-1">
-      Trade Audit Mobile App
+      Trade Audit App
     </a>
     <!--
     <div class="d-none d-lg-block text-truncate" style="color: hsla(var(--bs-emphasis-color-hsl), 0.7); letter-spacing: 1px;">
