--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,24 @@
       <li class="nav-item">
         <a class="nav-link" href="/urls"><img src="/assets/influencer-url.svg" style="width:20px;" alt="URLs">Web Pages</a>
       </li>
+      <li class="mt-3">
+        <h6 class="sidebar-header">Data Governance</h6>
+      </li>
+      <li>
+        <hr class="sidebar-divider">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/terms-of-use">Terms of Use</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/privacy-policy">Privacy Policy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cookie-policy">Cookie Policy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/account-deletion">Account Deletion</a>
+      </li>
     </ul>
     <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
   </div>
@@ -316,7 +334,10 @@
       </div>
     </a>
 
-    <ul class="nav text-end">
+    <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
+       target="_blank" class="nav text-end"
+    ><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60"></a>
+    <!--<ul class="nav text-end">
       {% if site.footer.links %}
       {% for link in site.footer.links %}
       {% if link.label and link.url %}
@@ -326,7 +347,7 @@
       {% endif %}
       {% endfor %}
       {% endif %}
-    </ul>
+    </ul>-->
   </div>
 </footer>
 </body>
