--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
     gtag('config', '{{ site.analytics.google.tracking_id }}');
   </script>
   <style>
+    /*
     .bg-body { background-color: #f9f7ed !important; }
     a { color: #1d9bf0; }
     a:hover { color: #ed2c8a; }
@@ -38,14 +39,18 @@
     .text-muted { color: #c7c6cb !important; }
     a.text-muted:hover { color: #ed2c8a !important; }
     .nav { --bs-nav-link-padding-y: 0.1rem; }
+    */
   </style>
 </head>
-<body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light" style="font-family: 'Gill Sans', 'Helvetica', sans-serif;">
+<body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
     <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
       <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" width="60" height="60" title="Trade Audit App" alt="Trade Audit App">
-      Trade Audit App
+      <div style="display: inline-block;vertical-align: middle;line-height: 14pt;">
+        Trade Audit App<br>
+        <span style="font-size: small;margin-top: 0;">For Android</span>
+      </div>
     </a>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
             data-bs-target="#sidebar-example"></button>
@@ -53,13 +58,13 @@
   <div class="offcanvas-body">
     <ul class="sidebar-nav">
       <li>
-        <h6 class="sidebar-header">Getting Started</h6>
+        <h6 class="sidebar-header">Auditing Trades</h6>
       </li>
       <li>
         <hr class="sidebar-divider">
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">Download</a>
+        <a class="nav-link" href="/">Adding Social Media</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/rankings">Influencer Rankings</a>
@@ -98,7 +103,10 @@
         <a class="nav-link" href="/account-deletion">Account Deletion</a>
       </li>
     </ul>
-    <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
+    <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
+        target="_blank"
+        style="margin-left: auto;margin-right: auto;margin-top: auto;"
+    ><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
   </div>
 </nav>
 <nav class="navbar navbar-expand-md docs-navbar sticky-top" style="">
