--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
     gtag('config', '{{ site.analytics.google.tracking_id }}');
   </script>
   <style>
+    :root {
+      --bs-navbar-padding-y: none;
+    }
     /*
     .bg-body { background-color: #f9f7ed !important; }
     a { color: #1d9bf0; }
@@ -46,10 +49,20 @@
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
     <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
-      <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;" width="60" height="60" title="Trade Audit App" alt="Trade Audit App">
-      <div style="display: inline-block;vertical-align: middle;line-height: 14pt;">
-        Trade Audit App<br>
-        <span style="font-size: small;margin-top: 0;">For Android</span>
+      <img
+          src="https://tradeaudit.app/assets/images/favicon.png"
+          style="border-radius:20%;"
+          width="60"
+          height="60"
+          title="Trade Audit App"
+          alt="Trade Audit App"
+      >
+      <div
+          style="display: inline-block;vertical-align: middle;line-height: 14pt;margin-left:4px;"
+      >Trade Audit App<br>
+        <span
+            style="font-size: small;margin-top: 0;padding-left:2px;"
+        >For Android</span>
       </div>
     </a>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
@@ -104,15 +117,17 @@
       </li>
     </ul>
     <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
-        target="_blank"
-        style="margin-left: auto;margin-right: auto;margin-top: auto;"
-    ><img alt="Get it on Google Play" height="60" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
+       target="_blank"
+       style="margin-left: auto;margin-right: auto;margin-top: auto;"
+    ><img alt="Get it on Google Play" height="60"
+          src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
   </div>
 </nav>
-<nav class="navbar navbar-expand-md docs-navbar sticky-top" style="">
+<nav class="navbar navbar-expand-md docs-navbar sticky-top bg-light">
   <div class="container-md px-3 px-sm-4 px-xl-5 py-1 justify-content-start">
     <div class="btn-group me-3 d-lg-none">
-      <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" class="btn btn-secondary btn-square" aria-label="Toggle sidebar">
+      <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" class="btn btn-secondary btn-square"
+              aria-label="Toggle sidebar">
         <i class="fa-light fa-sidebar" aria-hidden="true"></i>
       </button>
       <!--<button type="button" class="btn btn-secondary btn-square" aria-label="Toggle dark mode" onclick="toggleDarkMode()">
@@ -344,7 +359,8 @@
 
     <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
        target="_blank" class="nav text-end"
-    ><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60"></a>
+    ><img alt="Get it on Google Play"
+          src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60"></a>
     <!--<ul class="nav text-end">
       {% if site.footer.links %}
       {% for link in site.footer.links %}
