--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
     gtag('config', '{{ site.analytics.google.tracking_id }}');
   </script>
   <style>
-    :root {
+    /*.navbar {
       --bs-navbar-padding-y: none;
-    }
+    }*/
     /*
     .bg-body { background-color: #f9f7ed !important; }
     a { color: #1d9bf0; }
@@ -44,6 +44,7 @@
     .nav { --bs-nav-link-padding-y: 0.1rem; }
     */
   </style>
+  <script src="/static/javascript/bootstrap-5.3.2/bootstrap.bundle.min.js"></script>
 </head>
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
@@ -123,18 +124,18 @@
           src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
   </div>
 </nav>
-<nav class="navbar navbar-expand-md docs-navbar sticky-top bg-light">
-  <div class="container-md px-3 px-sm-4 px-xl-5 py-1 justify-content-start">
-    <div class="btn-group me-3 d-lg-none">
+<nav class="navbar navbar-expand-md docs-navbar sticky-top bg-light d-lg-none">
+  <div class="container-md px-3 px-sm-4 px-xl-5 py-1 justify-content-start" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-label="Toggle sidebar">
+    <!--<div class="btn-group me-3">
       <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" class="btn btn-secondary btn-square"
               aria-label="Toggle sidebar">
         <i class="fa-light fa-sidebar" aria-hidden="true"></i>
       </button>
-      <!--<button type="button" class="btn btn-secondary btn-square" aria-label="Toggle dark mode" onclick="toggleDarkMode()">
+      <button type="button" class="btn btn-secondary btn-square" aria-label="Toggle dark mode" onclick="toggleDarkMode()">
         <i class="fa-solid fa-moon" aria-hidden="true"></i>
-      </button>-->
-    </div>
-    <a href="/" class="navbar-brand d-flex align-items-center d-lg-none ms-auto ms-md-0">
+      </button>
+    </div>-->
+    <a href="/" class="navbar-brand d-flex align-items-center ms-md-0">
       <img src="https://tradeaudit.app/assets/images/favicon.png"
            style="border-radius:20%;"
            width="32" height="32"
