--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
   <link rel="shortcut icon" href="https://tradeaudit.app/assets/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/halfmoon.min.css" rel="stylesheet"
         integrity="sha256-SsJizWSIG9JT9Qxbiy8xnYJfjCAkhEQ0hihxRn7jt2M=" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+          crossorigin="anonymous"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
   <script>
@@ -125,7 +128,8 @@
   </div>
 </nav>
 <nav class="navbar navbar-expand-md docs-navbar sticky-top bg-light d-lg-none">
-  <div class="container-md px-3 px-sm-4 px-xl-5 py-1 justify-content-start" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-label="Toggle sidebar">
+  <div class="container-md px-3 px-sm-4 px-xl-5 py-1 justify-content-start" data-bs-toggle="offcanvas"
+       data-bs-target="#sidebar" aria-label="Toggle sidebar">
     <!--<div class="btn-group me-3">
       <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" class="btn btn-secondary btn-square"
               aria-label="Toggle sidebar">
