--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
   <link rel="shortcut icon" href="https://tradeaudit.app/assets/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/halfmoon.min.css" rel="stylesheet"
         integrity="sha256-SsJizWSIG9JT9Qxbiy8xnYJfjCAkhEQ0hihxRn7jt2M=" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+          integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+          crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
           integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
           crossorigin="anonymous"></script>
@@ -47,7 +50,6 @@
     .nav { --bs-nav-link-padding-y: 0.1rem; }
     */
   </style>
-  <script src="/static/javascript/bootstrap-5.3.2/bootstrap.bundle.min.js"></script>
 </head>
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
 <nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
