--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
   </style>
 </head>
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
-<nav class="sidebar offcanvas-start offcanvas-md" tabindex="-1" id="sidebar-example">
+<nav id="sidebar" class="sidebar offcanvas-start offcanvas-md" tabindex="-1">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
     <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
       <img
