--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
       </div>
     </a>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
-            data-bs-target="#sidebar-example"></button>
+            data-bs-target="#sidebar"></button>
   </div>
   <div class="offcanvas-body">
     <ul class="sidebar-nav">
